@startuml componentes-gantt
title Componentes — Pipeline de Gantt

package "Core/Trace" {
  class Trace {
    +slices: List<TraceSlice>
  }
  class TraceSlice {
    +pid: string
    +tInicio: number
    +tFin: number
    +tipo: SliceTipo
  }
  enum SliceTipo {
    CPU
    TCP
    TIP
    TFP
    IO
  }
}

package "Gantt Builder" {
  class GanttBuilder {
    +build(trace: Trace): GanttModel
    -filtrarCPU(slices): List<TraceSlice>
    -agruparPorPID(slicesCPU): Map<string, List<TraceSlice>>
    -normalizarHuecos(): void
  }
  class GanttModel {
    +tracks: List<GanttTrack>
    +tMin: number
    +tMax: number
  }
  class GanttTrack {
    +pid: string
    +segments: List<GanttSeg>
  }
  class GanttSeg {
    +start: number
    +end: number
  }
}

package "UI" {
  class GanttView {
    +render(model: GanttModel): void
    +onHover(seg: GanttSeg): Tooltip
  }
}

Trace "1" o-- "*" TraceSlice
TraceSlice --> SliceTipo
GanttBuilder ..> Trace : uses
GanttBuilder ..> GanttModel : creates
GanttModel "1" o-- "*" GanttTrack
GanttTrack "1" o-- "*" GanttSeg
GanttView ..> GanttModel : renders

note right of GanttBuilder
**GanttBuilder.build(trace)**
Mapea SOLO slices de CPU a segmentos (pid, start, end).

**Reglas de dibujo:**
• Solo se dibujan slices donde tipo == CPU
• TIP/TCP/TFP/IO NO son barras CPU
• Opcional: mostrar como marcas/tooltips
• Segmentos por PID ordenados por tiempo
• No rellenar huecos "imaginarios"

**Filtrado:**
1. filtrarCPU(slices) → solo SliceType.CPU
2. agruparPorPID() → Map<pid, List<TraceSlice>>
3. normalizarHuecos() → detectar gaps reales
end note
@enduml
